Fix stupid compile error
Signed-off-by: Ryan Cloherty <rcloherty@rocketsoftware.com>